--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ psql -U your_username -d your_database -h localhost -p 5432</code></pre>
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
                             </svg>
                         </button>
-                        <pre id="windows-connect" class="bg-gray-900 text-gray-300 p-4 rounded border border-gray-600 overflow-x-auto"><code>REM Set environment variable for password
+                        <pre id="windows-connect" class="bg-gray-900 text-gray-300 p-4 rounded border border-gray-600 overflow-x-auto"><code> cd \Program Files\PostgreSQL\replacewithv number \bin\ example-(cd \Program Files\PostgreSQL\15\bin\)
 set PGPASSWORD=your_password
 
 REM Connect to database
@@ -590,3 +590,4 @@ recover.bat</code></pre>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
 </html>
+
