--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ psql -U your_username -d your_database -h localhost -p 5432</code></pre>
 <pre id="windows-connect" class="bg-gray-900 text-gray-300 p-4 rounded border border-gray-600 overflow-x-auto">
 <code>
 # Navigate to PostgreSQL bin directory
-cd "C:\Program Files\PostgreSQL\pgAdmin V\bin"
+cd "C:\Program Files\PostgreSQL\pgAdmin\ie-15-16V\bin"
 
 # Set password for this session
 set PGPASSWORD=your_password
@@ -601,6 +601,7 @@ recover.bat</code></pre>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
 </body>
 </html>
+
 
 
 
